@@ -1,3 +1,4 @@
+2/22/12 restore ability to move detector
 # 0.00.12 (61619) Feb 22, 2012
 2/22/12 dev version to verify absorbance (A) and transmittance (T) models
 2/22/12 change molar absorptivity for Drink Mix, remove molar scaling factor from model
